# nsm-anomaly-repair

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: case-study-b-minus-l.md  limits.md
figures/: derived-standard-model.html  repair-census.html
nsm/: __init__.py  __main__.py  amplitudes.py  anomalies.py  atlas_visualize.py  charges.py  demo.py  derive.py  extensions.py  factorization.py  particles.py  processes.py  repair.py  repair_map.py  reps.py  selection.py  sm.py  unitarity.py  verdict.py  vertices.py  visualize.py
paper/: Makefile  README.md  paper.tex
paper/legacy/: README.md  nsm-original.tex
scripts/: repair_map.py
tests/: conftest.py  golden_atlas_n1.json  test_amplitudes.py  test_anomalies.py  test_atlas_visualize.py  test_charges.py  test_derive.py  test_extensions.py  test_factorization.py  test_gauge_anomalies.py  test_nonstandard.py  test_particles.py  test_processes.py  test_repair.py  test_repair_map.py  test_robustness.py  test_selection.py  test_uniqueness.py  test_unitarity.py  test_verdict.py  test_visualize.py
