[project]
name = "nsm"
version = "0.1.0"
description = "Explainable anomaly diagnosis and menu-relative matter repair for U(1)_X Standard Model extensions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["z3-solver"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = ["pytest"]
docs = ["pypandoc_binary"]
optimize = ["scipy"]

[tool.setuptools]
packages = ["nsm"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
